--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
     <title>Document</title>
 </head>
@@ -39,13 +39,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="book3.jpg" height="300" width="42" alt="First slide">
+                <img class="d-block w-100" src="/images/book3.jpg" height="300" width="42" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="book1.jpg" height="300" width="42" alt="Second slide">
+                <img class="d-block w-100" src="/images/book1.jpg" height="300" width="42" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="book2.jpeg" height="300" width="42" alt="Third slide">
+                <img class="d-block w-100" src="/images/book2.jpeg" height="300" width="42" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
