--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="carousel-item" style="background-image: url('images/book4.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
+            <p>books are important</p>
           </div>
         </div>
       </div>
@@ -86,14 +86,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
- 
-
-  <!-- Page Content -->
-  <!-- <section class="py-5">
-    <div class="container">
-     
-    </div>
-  </section> -->
+  
 
   <!-- Footer -->
   <footer class="py-3  text-dark">
