--- a/search.html
+++ b/search.html
@@ -7,18 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/search.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
-    <title>Document</title>
+    
+    <title>Search</title>
 </head>
 
-<body class="bodyContainer">
+<body class="bodySearch">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
         <div class="container ">
-            <a class="navbar-brand " href="#">Bookworm</a>
+            <a class="navbar-brand " href="index.html">Bookworm</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,9 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="search.html">Search</a>
@@ -37,7 +36,7 @@
                         <a class="nav-link" href="price.html">Prices</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="reviews.html">Reviews</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -50,11 +49,18 @@
                 <br>
                 <input type="search" class="search" placeholder="Search your book">
                 <br>
-                <input type="submit" class="button" name="submit" value="Bookworm Search">
-                <input type="submit" class="button" name="lucky" value="I'm Feeling Lucky">
+                <input type="submit" class="buttonSearch" name="submit" value="Bookworm Search">
+                <input type="submit" class="buttonSearch" name="lucky" value="I'm Feeling Lucky">
             </form>
         </div>
     </header>
+
+    <div id="resultContainer">
+        <div class="resultItem1"></div>
+        <div class="resultItem2"></div>
+        <div class="resultItem3"></div>
+    </div>
+
 
 
     <footer class="py-3  text-dark">
