--- a/contact.html
+++ b/contact.html
@@ -17,32 +17,32 @@
 
  <!-- Navigation -->
  <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
-  <div class="container ">
-    <a class="navbar-brand " href="index.html">Bookworm</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home
-           
+    <div class="container ">
+        <a class="navbar-brand" href="#">
+            <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
           </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="search.html">Search</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="price.html">Prices</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">ӇƠMЄ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="search.html">ƧЄƛƦƇӇ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="price.html">MƳ ƑƛƔƠƲƦƖƬЄ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
-
 <!-- Default form contact -->
 <form id="contactForm">
     <p class="h4 text-center mb-4">Write to us</p>
@@ -77,12 +77,11 @@
                       
 
   <!-- Footer -->
-  <footer class="py-3  text-dark">
-    <div class="container">
-      <p class="m-0 text-center text-dark">Copyright &copy; Bookworm 2018</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+  <footer class=" footer border-top   text-dark text-center">
+      <img src="images/bookworm.png" width="30" height="30" class="d-inline-block ext-center align-middle " alt="">
+      <span class="text-center"> Copyright &copy; Bookworm 2018</span>
+  <!-- /.container -->
+</footer>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
