--- a/index.html
+++ b/index.html
@@ -19,30 +19,32 @@
 
    <!-- Navigation -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
-    <div class="container ">
-      <a class="navbar-brand " href="#">Bookworm</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
-             
+      <div class="container ">
+          <a class="navbar-brand" href="#">
+              <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="search.html">Search</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="price.html">Prices</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
+         
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+              aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="index.html">ӇƠMЄ</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="search.html">ƧЄƛƦƇӇ</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="price.html">MƳ ƑƛƔƠƲƦƖƬЄ</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </div>
   </nav>
 
 
@@ -89,9 +91,12 @@
   
 
   <!-- Footer -->
-  <footer class="py-3  text-dark">
-    <div class="container">
-      <p class="m-0 text-center text-dark">Copyright &copy; Bookworm 2018</p>
+  <footer class=" footer border-top  text-dark text-center">
+    <div class="container ">
+
+      	<img src="images/bookworm.png" width="30" height="30" class="d-inline-block ext-center align-middle " alt="">
+			  <span class="text-center"> Copyright &copy; Bookworm 2018</span>
+   
     </div>
     <!-- /.container -->
   </footer>
