--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,13 @@
 
 <body class="bodyContact">
 
- <!-- Navigation -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
+   <!-- Navigation -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
     <div class="container ">
         <a class="navbar-brand" href="#">
             <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
           </a>
+       
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Log In</a>
+              </li>
             </ul>
         </div>
     </div>
