--- a/search.html
+++ b/search.html
@@ -17,34 +17,38 @@
 
 <body class="bodySearch">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
-        <div class="container ">
-                <a class="navbar-brand" href="#">
-                        <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
-                      </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">ӇƠMЄ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="search.html">ƧЄƛƦƇӇ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="price.html">MƳ ƑƛƔƠƲƦƖƬЄ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
-                    </li>
-                </ul>
-            </div>
+   <!-- Navigation -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
+    <div class="container ">
+        <a class="navbar-brand" href="#">
+            <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
+          </a>
+       
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">ӇƠMЄ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="search.html">ƧЄƛƦƇӇ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="price.html">MƳ ƑƛƔƠƲƦƖƬЄ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Log In</a>
+              </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <div calss="container">
         <header class="row ">
