--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
@@ -18,7 +20,7 @@
  <!-- Navigation -->
  <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
     <div class="container ">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand imageText" href="#">
             <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -28,16 +30,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">ӇƠMЄ</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="search.html">ƧЄƛƦƇӇ</a>
+                    <a class="nav-link" href="search.html">Search</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="price.html">MƳ ƑƛƔƠƲƦƖƬЄ</a>
+                    <a class="nav-link" href="price.html">My Favourite</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
             </ul>
         </div>
