--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,8 +22,8 @@
    <!-- Navigation -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
       <div class="container ">
-          <a class="navbar-brand" href="#">
-              <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
+          <a class="navbar-brand imageText" href="#">
+              <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top " alt=""> ƁƠƠƘƜƠƦM
             </a>
          
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -31,16 +33,16 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                      <a class="nav-link" href="index.html">ӇƠMЄ</a>
+                      <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="search.html">ƧЄƛƦƇӇ</a>
+                      <a class="nav-link" href="search.html">Search</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="price.html">MƳ ƑƛƔƠƲƦƖƬЄ</a>
+                      <a class="nav-link" href="price.html">My Favourite</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
+                      <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
               </ul>
           </div>
@@ -101,11 +103,15 @@
     <!-- /.container -->
   </footer>
 
+     
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+ 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+ 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<script src="javascript/index.main.js"></script>
 
 </body>
 
