--- a/search.html
+++ b/search.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- <link rel="stylesheet" type="text/css" href="css/search.css"> -->
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
+   
 
     <title>Search</title>
 </head>
@@ -31,16 +30,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">ӇƠMЄ</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="search.html">ƧЄƛƦƇӇ</a>
+                    <a class="nav-link" href="search.html">Search</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="price.html">MƳ ƑƛƔƠƲƦƖƬЄ</a>
+                    <a class="nav-link" href="price.html">My Favourite</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Log In</a>
@@ -68,9 +67,7 @@
         <div class="row w-75 ml-5 mt-5" id="book-view">
 
         </div>
-        <!-- <div class="resultItem1"></div>
-        <div class="resultItem2"></div>
-        <div class="resultItem3"></div> -->
+      
     </div>
 
 
@@ -81,11 +78,10 @@
         <!-- /.container -->
     </footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+    
+   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
