--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="contact.html">ƇƠƝƬƛƇƬ ƲƧ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Log In</a>
+                  <a class="nav-link" href="login.html">Log In</a>
               </li>
             </ul>
         </div>
