--- a/search.html
+++ b/search.html
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Log In</a>
+                  <a class="nav-link" href="login.html">Log In</a>
               </li>
             </ul>
         </div>
