added quote to main.html and show more information about books

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
   <title>Main</title>
@@ -60,6 +59,8 @@
     
     <div class="row">
       <div class="col-md-12">
+      <div id="quote" class="bg-light p-3">“So many books, so little time.” 
+          ― Frank Zappa</div>
   
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
