--- a/search.html
+++ b/search.html
@@ -49,7 +49,7 @@
     </div>
 </nav>
 
-    <div calss="container">
+    <div calss="container-fluid">
         <header class="row ">
             <div class=" col-md-6 mx-auto searchContainer">
                 <h1>ƁƠƠƘƜƠƦM</h1>
@@ -64,7 +64,7 @@
             </div>
         </header>
 
-        <div class="row w-75 ml-5 mt-5" id="book-view">
+        <div class="row w-100 ml-5 mb-5" id="book-view">
 
         </div>
       
