added login authentication ,still needs work

--- a/myFavourite.html
+++ b/myFavourite.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
    
 
-    <title>Search</title>
+    <title>My Favourite</title>
 </head>
 
 <body class="bodySearch">
@@ -50,23 +50,7 @@
 </nav>
 
     <div calss="container-fluid">
-        <header class="row ">
-            <div class=" col-md-6 mx-auto searchContainer">
-                <h1>ƁƠƠƘƜƠƦM</h1>
-                <!-- <img id="searchImg" src="images/bookwormLetters.jpg " /> -->
-                <form >
-                    <br>
-                    <input type="input" id="search-text" class="search" placeholder="Search your book">
-                    <br>
-                    <input type="submit" id="search-btn" class="buttonSearch" name="submit" value="Bookworm Search">
-
-                </form>
-            </div>
-        </header>
-
-        <div class="row w-100 ml-5 mb-5" id="book-view">
-
-        </div>
+      
       
     </div>
 
@@ -85,7 +69,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="javascript/search.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+    <script src="javascript/myFavourite.js"></script>
+
     <script src="javascript/bootbox.min.js"></script>
 
 </body>
