--- a/myFavourite.html
+++ b/myFavourite.html
@@ -17,37 +17,44 @@
 <body class="bodySearch">
 
    <!-- Navigation -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow">
-    <div class="container ">
+   <div class="navDiv ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light textColor fixed-top shadow mb-3">
+      <div class="container ">
+
         <a class="navbar-brand" href="#">
-            <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
-          </a>
-       
+          <img src="images/bookworm.png" width="30" height="30" class="d-inline-block align-top" alt=""> ƁƠƠƘƜƠƦM
+        </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="search.html">Search</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="myFavourite.html">My Favourite</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="login.html">Log In</a>
-              </li>
-            </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="search.html">Search</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="myFavourite.html">My Favourite</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Log In</a>
+            </li>
+
+
+
+
+          </ul>
         </div>
-    </div>
-</nav>
+
+      </div>
+    </nav>
 
     <div calss="container-fluid">
       
