added https to qoute API

--- a/contact.html
+++ b/contact.html
@@ -38,21 +38,21 @@
                             <a class="nav-link" href="search.html">Search</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="myFavourite.html">My Favourite</a>
+                            <a class="nav-link" href="myFavourite.html">Favourite</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contact </a>
                         </li>
                         <li class="nav-item" id="loginNav">
-                                <a class="nav-link" href="login.html">Log In</a>
-                              </li>
-                              
-                              <li class="nav-item d-none" id="logoutNav">
-                                      <button class="nav-link btn btn-light logoutBtn" type="submit">Log Out</button>
-                                    </li>
-                              <li id="name" class="nav-item nav-link">
-                                     
-                                    </li>
+                            <a class="nav-link" href="login.html">Log In</a>
+                        </li>
+
+                        <li class="nav-item d-none" id="logoutNav">
+                            <button class="nav-link btn btn-light logoutBtn" type="submit">Log Out</button>
+                        </li>
+                        <li id="name" class="nav-item nav-link">
+
+                        </li>
                     </ul>
                 </div>
 
@@ -109,8 +109,8 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-        <script src="javascript/contact.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+    <script src="javascript/contact.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
 
 
 </body>
