--- a/search.html
+++ b/search.html
@@ -38,10 +38,10 @@
                   <a class="nav-link" href="search.html">Search</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="myFavourite.html">My Favourite</a>
+                  <a class="nav-link" href="myFavourite.html"> Favourite</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="contact.html">Contact </a>
                 </li>
                 <li class="nav-item" id="loginNav">
                         <a class="nav-link" href="login.html">Log In</a>
