fixed some bugs in search page

--- a/search.html
+++ b/search.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
    
 
@@ -66,8 +67,9 @@
             <div class=" col-md-6 mx-auto searchContainer">
                 <h1>ƁƠƠƘƜƠƦM</h1>
                 <!-- <img id="searchImg" src="images/bookwormLetters.jpg " /> -->
+              
                 <form >
-                    <br>
+                    <br>  <h3>Search by Title, Author or Keyword</h3>
                     <input type="input" id="search-text" class="search" placeholder="Search your book">
                     <br>
                     <input type="submit" id="search-btn" class="buttonSearch" name="submit" value="Bookworm Search">
