--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -52,7 +53,7 @@
                   </li>
             <li id="name" class="nav-item nav-link">
                    
-                  </li>
+                  </li
 
 
           </ul>
@@ -72,7 +73,7 @@
             <div class="container">
                 
                 <div class="row">
-                    <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <div class="col-md-8 col-md-offset-2 text-center">
                         <h2>BookWorm Login &amp; Register Forms</h2>
 
                     </div>
