show carousel caption on small screens

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
           <div class="carousel-inner" role="listbox">
             <!-- Slide One - Set the background image for this slide in the line below -->
             <div class="carousel-item active" style="background-image: url('images/book2.jpg')">
-              <div class="carousel-caption d-none d-md-block ">
-                <h2>ƁƠƠƘƜƠƦM</h2>
+              <div class="carousel-caption ">
+                
                 <h4>
-                  <p class="myFont"> you can search any book you want !!!</p>
-                  </h3>
+                  <p class="myFont"> you can search any book you want </p>
+                </h4>
                   <button class="btn btn-warning px-4">
                     <a href="search.html">Search</a>
                   </button>
@@ -93,9 +93,10 @@
             </div>
             <!-- Slide Two - Set the background image for this slide in the line below -->
             <div class="carousel-item" style="background-image: url('images/book8.jpg')">
-              <div class="carousel-caption  d-none d-md-block">
-                <h3>ƁƠƠƘƜƠƦM</h3>
-                <p>you can save your favourite books</p>
+              <div class="carousel-caption  ">
+                  <h4>
+                  <p class="myFont"> you can save your favourite books</p>
+                </h4>
                 <button class="btn btn-warning px-4">
                   <a href="myFavourite.html">My Favourite</a>
                 </button>
@@ -104,9 +105,13 @@
             </div>
             <!-- Slide Three - Set the background image for this slide in the line below -->
             <div class="carousel-item" style="background-image: url('images/book9.jpg')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>ƁƠƠƘƜƠƦM</h3>
-                <p>books are magic</p>
+              <div class="carousel-caption ">
+                  <h4>
+                      <p class="myFont"> Log In and save your favourite books know </p>
+                    </h4>
+                    <button class="btn btn-warning px-4">
+                        <a href="login.html">Log In</a>
+                      </button>
               </div>
             </div>
           </div>
