--- a/login.html
+++ b/login.html
@@ -96,13 +96,14 @@
                                 <form role="form" action="" method="post" class="login-form">
                                     <div class="form-group">
                                         <label class="sr-only" for="form-username">Email</label>
-                                        <input type="text" id="email2-input"name="form-username" placeholder="Username..." class="form-username form-control" id="form-username">
+                                        <input type="text" id="email2-input"name="form-username" placeholder="Email..." class="form-username form-control" id="form-username">
                                     </div>
                                     <div class="form-group">
                                         <label class="sr-only" for="form-password">Password</label>
                                         <input type="password" id="password2-input" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
                                     </div>
                                     <button type="submit" id="loginBtn" class="btn">Sign in!</button>
+                                    <p id="error" style="color: red"></p>
                                 </form>
                             </div>
                         </div>
@@ -155,6 +156,7 @@
                                     </div>
 
                                     <button type="submit" id="registerBtn" class="btn">Sign me up!</button>
+                                    <p id="error2" style="color: red"></p>
                                 </form>
                             </div>
                         </div>
