added comments and update README

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <div class="carousel-caption ">
                 
                 <h4>
-                  <p class="myFont"> you can search any book you want </p>
+                  <p class="myFont">  Search any book you want </p>
                 </h4>
                   <button class="btn btn-warning px-4">
                     <a href="search.html">Search</a>
@@ -95,7 +95,7 @@
             <div class="carousel-item" style="background-image: url('images/book8.jpg')">
               <div class="carousel-caption  ">
                   <h4>
-                  <p class="myFont"> you can save your favourite books</p>
+                  <p class="myFont"> Save your favorite books</p>
                 </h4>
                 <button class="btn btn-warning px-4">
                   <a href="myFavourite.html">My Favourite</a>
@@ -105,9 +105,9 @@
             </div>
             <!-- Slide Three - Set the background image for this slide in the line below -->
             <div class="carousel-item" style="background-image: url('images/book9.jpg')">
-              <div class="carousel-caption ">
+              <div class="carousel-caption  ">
                   <h4>
-                      <p class="myFont"> Log In and save your favourite books know </p>
+                      <p class="myFont"> Log In and save your favourite books </p>
                     </h4>
                     <button class="btn btn-warning px-4">
                         <a href="login.html">Log In</a>
@@ -133,7 +133,7 @@
     <div class="container ">
 
       <img src="images/bookworm.png " width="30 " height="30 " class="d-inline-block ext-center align-middle " alt=" ">
-      <span class="text-center "> Copyright &copy; Bookworm 2018</span>
+      <span class="text-center "> &copy; Bookworm 2018</span>
 
     </div>
     <!-- /.container -->
