--- a/myFavourite.html
+++ b/myFavourite.html
@@ -80,7 +80,7 @@
 
     <footer class=" footer border-top   text-dark text-center">
         <img src="images/bookworm.png" width="30" height="30" class="d-inline-block ext-center align-middle " alt="">
-        <span class="text-center"> Copyright &copy; Bookworm 2018</span>
+        <span class="text-center">  &copy; Bookworm 2018</span>
         <!-- /.container -->
     </footer>
 
